# pftui

./: .gitignore  AGENTS.md  CHANGELOG-archive.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DONE.md  Dockerfile  FEEDBACK.csv  FEEDBACK.md  LICENSE  MODELS.md  ONBOARDING.md  PRODUCT-PHILOSOPHY.md  PRODUCT-VISION.md  QA-REPORT.md  README.md  TODO.md  WEBSITE_DEPLOYMENT.md  WEB_DASHBOARD.md  flake.nix  install.sh  medium-digest-2026-04-01.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  release.yml  website.yml
Formula/: pftui.rb
agents/: FIRST-PRINCIPLES.md
agents/deep-analysis/: SKILL.md
agents/deepdive/: SKILL.md
agents/intelligence-report/: FEEDBACK.csv  SKILL.md  gen-report.py
agents/investor-panel/: config.toml
agents/pftui-feature/: SKILL.md
agents/report-prompts/: README.md  _shared-operator-focus.md  phase1-timeframe-analyst.md  phase1b-blind-analyst.md  phase2a-adversary.md  phase2b-panel-persona.md  phase2c-external-research.md  phase2d-antithesis.md  phase3-synthesis-writer.md  phase3b-deep-dive.md  phase4-decision-architect.md  phase5-steelman-bear.md  phase5-steelman-bull.md  phase5.5-composition.md  phase6-debate-moderator.md  public-newsletter-writer.md  step11-operator-interview.md
agents/routines/: README.md  adversary-analyst.md  alert-investigator.md  alert-watchdog.md  dev-agent.md  dixon-blog-ingestion.md  evening-analysis.md  high-timeframe-analyst.md  low-timeframe-analyst.md  macro-timeframe-analyst.md  medium-timeframe-analyst.md  morning-brief.md  public-daily-newsletter.md
analytics/layers/: low_timeframe_analyst.md
deploy/systemd/: README.md  pftui-daemon.service  pftui-mobile.service
docs/: AI-LAYER.md  ANALYTICS-ENGINE.md  ANALYTICS-SPEC.md  API-SOURCES.md  ARCHITECTURE.md  BACKEND-PARITY.md  CLI-DESIGN.md  CLI-MIGRATION.md  CLI-TREE.md  CYCLE-SIGNALS.md  CYCLE-THEORY.md  DAEMON.md  DATA-AGGREGATION.md  DATA-ARCHITECTURE.md  DISTRIBUTION-READINESS.md  DISTRIBUTION.md  ENVIRONMENT-ENGINE.md  EPISTEMICS.md  KEYBINDINGS.md  MIGRATING.md  MOBILE-WEBAPP-DESIGN.md  PHILOSOPHY.md  POSITIONING-MODELS.md  README.md  RELEASING.md  RESEARCH-THINKORSWIM.md  TUI-GLANCE-PROGRAM.md  VISION.md  WEB-DASHBOARD-REMOVAL.md  WEB_API_SCHEMA_v1.md  WEB_PARITY_CHECKLIST.md  WEB_PARITY_MATRIX.md  WEB_REBUILD_CHECKLIST.md  WEB_STABLE_ROLLOUT.md  db-catalog.toml
docs/audits/: 2026-05-29-completion-audit.md  2026-06-23-capability-audit-findings.md
docs/reference/: cyber-dots.pine
mobile/: README.md
models/: m1-regime-balanced.toml  m2-hard-money-cycles.toml  m3-stage-breakout.toml  static-60-40.toml
reports/: 1-April-2026.md  10-April-2026.md  13-April-2026.md  15-May-2026.md  2-April-2026.md  29-March-2026.md  3-April-2026.md  30-March-2026.md  31-March-2026.md  4-April-2026.md  5-April-2026.md  6-April-2026.md  8-April-2026.md  FEEDBACK.csv  daily-2026-04-17.md  daily-2026-04-20.md  daily-2026-04-22.md  daily-2026-05-01.md  daily-2026-05-26.md  daily-2026-05-28.md  daily-2026-06-03.md  daily-2026-06-18.md  daily-2026-06-22.md
scoop/: pftui.json
scripts/: backup-postgres.sh  backup-verify.sh  btc-cycle-indicators-report.py  check_distribution_versions.sh  check_web_parity_checklist.sh  db-watchdog.sh  db_census.py  deploy.sh  migrate-sqlite-to-postgres.sh  parity_check.sh  prepare_distribution_manifests.sh  render_aur_pkgbuild.sh  update_distribution_manifests.sh  update_scoop_manifest.sh
skills/investor-panel/: collect-data.sh  schema.json
skills/pftui-feature/: SKILL.md
snap/: snapcraft.yaml
src/: app.rs  cli.rs  config.rs  main.rs  notify.rs  text_util.rs
src/alerts/: cycle_signal_alert.rs  engine.rs  mod.rs  rules.rs
src/analytics/: analog.rs  basket.rs  calibration_scorer.rs  catalysts.rs  changepoint.rs  contract_tests.rs  copula.rs  cycle_clock.rs  cycle_engine.rs  cycle_signal_backtest.rs  cycle_signals.rs  deltas.rs  drawdown.rs  drawdown_metrics.rs  environment.rs  (+17 more)
tests/: analyst_routine_commands.rs  cli_help_smoke.rs  cycle_signal_cli.rs  doc_commands.rs  prior_release_schema.rs  report_build_daily_perf.rs  report_prompt_templates.rs  schema_conformance.rs  thesis_chains_extract.rs  web.integration.spec.ts  web.mocks.ts  web.visual.spec.ts
viz/: README.md  analog_viz.py  backtest_viz.py  cycle_backtest_viz.py  cycle_signals_viz.py  cycle_viz.py  macro_viz.py  model_viz.py  portfolio_viz.py  rates_viz.py  render.py  report_charts.py  risk_viz.py  scenario_viz.py  test_analog_viz.py  test_backtest_viz.py  test_cycle_backtest_viz.py  test_cycle_signals_viz.py  test_cycle_viz.py  test_macro_viz.py  test_model_viz.py  test_portfolio_viz.py  test_rates_viz.py  test_risk_viz.py  test_scenario_viz.py  theme.py
website/: CNAME  README.md  index.html  script.js  style.css
(+547 files in other folders)
