[package]
name = "pftui"
version = "0.5.0"
edition = "2021"
description = "A beautiful terminal portfolio tracker with real-time prices, charts, and market data"
license = "MIT"
repository = "https://github.com/skylarsimoncelli/pftui"
homepage = "https://github.com/skylarsimoncelli/pftui"
readme = "README.md"
keywords = ["portfolio", "tui", "terminal", "finance", "stock"]
categories = ["command-line-utilities"]

[package.metadata.deb]
maintainer = "Skylar Simoncelli <skylar.simoncelli@icloud.com>"
copyright = "2026, Skylar Simoncelli"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/pftui", "usr/bin/", "755"],
    ["docs/README.md", "usr/share/doc/pftui/README", "644"],
]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
yahoo_finance_api = "4"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
csv = "1"
anyhow = "1"
time = "0.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-util = "0.7"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pftui", dest = "/usr/bin/pftui", mode = "755" },
    { source = "docs/README.md", dest = "/usr/share/doc/pftui/README", mode = "644" },
]
