[package]
name = "pftui"
version = "0.26.0"
edition = "2021"
description = "A beautiful terminal portfolio tracker with real-time prices, charts, and market data"
license = "MIT"
repository = "https://github.com/skylarsimoncelli/pftui"
homepage = "https://github.com/skylarsimoncelli/pftui"
readme = "README.md"
keywords = ["portfolio", "tui", "terminal", "finance", "stock"]
categories = ["command-line-utilities"]

[package.metadata.deb]
maintainer = "pftui Maintainers <support@pftui.com>"
copyright = "2026, Skylar Simoncelli"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/pftui", "usr/bin/", "755"],
    ["docs/README.md", "usr/share/doc/pftui/README", "644"],
]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
yahoo_finance_api = "4"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
csv = "1"
anyhow = "1"
time = "0.3"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = "0.7"
tokio-stream = "0.1"
scraper = "0.22"
calamine = "0.33"
regex = "1"
rustyline = "14"
shlex = "1"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pftui", dest = "/usr/bin/pftui", mode = "755" },
    { source = "docs/README.md", dest = "/usr/share/doc/pftui/README", mode = "644" },
]
